--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-/Debug/
+# Ignore all sub-dirs but inc/ and src/
+*/*
+!inc/*
+!src/*
+
+# Ignore additional files in root dir
+# Eclipse
+.project
+.cproject
